-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
4862
There are two bad effects with obd_self_export passing to lut_client_alloc/free. First, it is just not needed to allocate client data for it, second, this can cause assertion in lut_client_free() if lut_init() wasn't called due to failed mdt_init0().
Fix could be just check for exp == exp->exp_obd->obd_self_export in mdt/obdfilter. Alternatively that can be done inside lut_client_alloc/free but I like to keep them generic
- Trackbacks
-
Changelog 2.2
version 2.2.0 Support for networks: o2iblnd OFED 1.5.4 Server support for kernels: 2.6.32220.4.2.el6 (RHEL6) Client support for unpatched kernels: 2.6.18274.18.1.el5 (RHEL5) 2.6.32220.4.2.el6 (RHEL6) 2.6.32.360....